2009-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add tests for some reentrant versions of functions
	where we are still using the non-rentrant versions.

	* magick/composite.c (CompositeImage): Fix problem with
	compositing images where the change image overlaps off the left
	side of the canvas.  Should fix SourceForge issue #2766200 "memory
	allocation error when compositing small images".

2009-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/semaphore.c: Re-arrange ifdefs so that it is possible to
	use pthreads under the WIN32 API.

2009-04-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/bit_stream.c: Bitstream functions were often not inlining
	and inline functions which don't inline are not much use.
	Bitstream functions are now normal library functions.

2009-03-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick/bin/delegates.mgk: Remove bounding box option (-g) from
	Postscript delegate specifications.

	* config/delegates.mgk.in: Remove bounding box option (-g) from
	Postscript delegate specifications.

	* coders/{ept.c, pdf.c, ps.c} : PDF bounding box is sometimes
	incorrect or not globally applicable so don't specify bounding box
	when reading PDF files.  Postscript files do need the bounding box
	so make sure that it is still supplied.  Resolves SF tracker issue
	2487651 "convert from pdf chops off rhs".

2009-03-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Magick++/Image.rst: Translate Image.html to reStructuredText
	format for easier maintenance.

2009-03-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/rgb.c: Compute the quantum type rather than using a
	recurring conditional statement.  It turns out that the -endian
	option is working as it should.

2009-03-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/{gray.c, rgb.c, cymk.c}: Work toward supporting the
	-endian option.  Not working properly yet.
